# Aegis-Data-Intelligence

./: .env.example  CLAUDE.md  README.md  STRUCTURE.md  requirements.txt  run_agent.sh
.cursor/rules/: project-standards.mdc
.github/: CLAUDE.md  CODEOWNERS
.github/prompts/: COMMIT_PROMPT.md  ISSUE_PROMPT.md
.github/workflows/: auto-assign.yml  claude.yml
aegis/.claude/: settings.json
aegis/.claude/agents/: aegis-tester.md  connector-debugger.md  pipeline-expert.md
aegis/.claude/skills/aegis-test/: SKILL.md
aegis/backend/: pyproject.toml
aegis/backend/aegis/: config.py  main.py
aegis/backend/aegis/agents/: investigator.py  investigator_tools.py
aegis/backend/aegis/api/: discovery.py  router.py  system.py
aegis/backend/aegis/core/: connectors.py  models.py
aegis/backend/aegis/services/: langchain_llm.py
aegis/backend/alembic/versions/: 002_add_incident_report.py
aegis/backend/tests/: test_discovery_api.py  test_investigator_tools.py  test_langchain_llm.py  test_models_discovery.py  test_models_report.py
agents/: ai_email_agent_openai.py  ai_email_agent_react_openai.py  bulk_send.py  send_email_cli.py
demos/: demo_react.py
docs/: AGENT_COMPARISON.md  GETTING_STARTED.md  QUICKSTART.md  README.md  README_AI_AGENT.md  README_REACT.md
docs/plans/: 2026-02-17-incident-report-design.md  2026-02-19-aegis-claude-skills-design.md  2026-02-19-aegis-claude-skills-impl.md
examples/: lecture01_recipients.json  recipients_example.csv  recipients_example.json
tests/: test_ai_agent.py  test_react.py  troubleshoot_email.py
utils/: agent-fix  setup.sh
(+9 files in other folders)
