[project]
name = "aegis"
version = "0.1.0"
description = "Aegis Data Intelligence Platform — self-healing data quality monitoring"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlglot>=20.0.0",
    "openai>=1.0.0",
    "apscheduler>=3.10.0",
    "cryptography>=41.0.0",
    "websockets>=12.0",
    "httpx>=0.25.0",
    "aiosqlite>=0.19.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "httpx>=0.25.0",
]
snowflake = ["snowflake-sqlalchemy>=1.5.0"]
bigquery = ["sqlalchemy-bigquery>=1.8.0"]
databricks = ["databricks-sql-connector>=3.0.0"]

[tool.setuptools.packages.find]
include = ["aegis*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
